fixed bug with home page column sizing on small screens

--- a/src/pages/Home/styles.scss
+++ b/src/pages/Home/styles.scss
@@ -1,3 +1,3 @@
 .home-column {
-    height: 20rem;
+    min-height: 20rem;
 }
